[Flatpak SDK] Direct AVIF loading does not work. https://bugs.webkit.org/show_bug.cgi?id=222867

Patch by Philippe Normand <pnormand@igalia.com> on 2021-04-27
Reviewed by Michael Catanzaro.

Source/WebKit:

* NetworkProcess/soup/NetworkDataTaskSoup.cpp:
(WebKit::NetworkDataTaskSoup::didGetFileInfo): Use mime-type reported for local files by gio
only as a last resort. Our MIMETypeRegistry is more reliable in these cases.

Tools/buildstream:

* elements/sdk-platform.bst:
* elements/sdk/intltool.bst: Removed.
* elements/sdk/shared-mime-info.bst: Bump to version 2.1 which has support for detecting AVIF bitstreams.

Canonical link: https://commits.webkit.org/237063@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276635 268f45cc-cd09-0410-ab3c-d52691b4dbfc